style.css
/* TODO:
    > Implement page-wide minimum-width (and determine what that should be) [mobile PSD is 480w]
        So assuming 480w, at 9:16 [old phone AR] that'd be 853x480 (853.33 rounded down)
    > Implement collapsing navbar (hamburger menu) w/ media query
    > Double-check sizing/position units (px em rem etc)
    > Double-check sizing versus PSDs
*/

/* Normal */
@font-face {
    font-family: "Montserrat";
    src: local("Montserrat"),
    url("/fonts/montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
    /* Displays text in a fallback font if Montserrat is downloading; enhances usability on slow connections */
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/At-rules/@font-face/font-display#syntax */
    font-display: swap;
}

/* Italic */
@font-face {
    font-family: "Montserrat";
    src: local("Montserrat Italic"), local("Montserrat-Italic"),
    url("/fonts/montserrat/Montserrat-Italic-VariableFont_wght.ttf") format("truetype");
    font-style: italic;
    font-display: swap;
}

* {
    /* TODO: Consider font size (24px measured, browsers may scale it though) */
    font-family: "Montserrat", sans-serif;

    /* Override default margins put in place by certain browser stylesheets */
    margin: 0;
}

a {
    color: black;
    text-decoration: none;
}

button {
    background-color: #202020;

    color: white;
    font-weight: bold;

    border-style: none;
    border-radius: 3px;

    padding: 0.5em 1.5em;
}

.underline-stylised {
    position: relative;

    font-weight: bold;
}

.underline-stylised::after {
    content: "";
    position: absolute;
    inset: auto 0 -18px 0;
    height: 18px;

    background-image: url("assets/img/underline.png");
    background-repeat: no-repeat;
    /* Stretch to width of text */
    background-size: 100% 100%;
}


header, footer {
    /* TODO: Add min-width property to prevent underflow/clipping */
    width: 100%;

    color: white;

    /* vertical centering */
    display: flex;
}

.header-content, .footer-content {
    width: 100%;
    /* TODO: Double-check max-width (PSD = 1200px) */
    max-width: 80rem;

    font-size: 15px;

    display: flex;
}

header {
    height: 27px;

    background-color: #b81d21;
}

.header-content {
    justify-content: end;
    gap: 8px;

    margin: auto;
}

footer {
    background-color: #202020;
    border-top: #b81d21 solid 5px;
}

.footer-content {
    font-weight: bold;
    padding: 1rem 0;
    justify-content: space-between;

    margin: auto;
}


.navbar-container {
    height: 113px;
    width: 100%;

    position: absolute;
    top: 27px;
    z-index: 100;

    display: flex;
    justify-content: center;

    background-color: white;
    box-shadow: 0 20px 27px -27px;
}

.navbar-content {
    width: 100%;
    max-width: 80rem;

    font-weight: bold;
    font-size: 15px;

    display: flex;
    align-items: center;
    /* TODO: Double-check gap; measured 45px or 5em in PSD */
    gap: 3rem;
}

/* Toggled in JS via an Intersection Observer, based on <header> visibility */
.navbar-stickifier {
    position: fixed;
    top: 0;
}

.navbar-content a:hover {
    color: #b81d21;
    text-decoration: underline;
    text-decoration-thickness: 0.2rem;
    text-underline-offset: 0.3rem;
}

.navbar-button-donate {
    background-color: #cd1120;
}


.flex-container-a, .flex-container-b {
    max-width: 80rem;

    display: flex;
    flex-direction: column;
    align-items: center;
}

.flex-container-a {
    gap: 150px;
    /* Top 140px (header + navbar), l/r auto [centered], 70px before cards */
    /* TODO: Testing adding 190px for closer-to-PSD margins; og 140px, new 330px*/
    margin: 300px auto 100px;
}

.flex-container-b {
    margin: 70px auto;
}


.hero-bg {
    position: absolute;
    z-index: -1;
    /* 27px header + 113px navbar */
    top: 140px;
}

.hero-container {
    color: white;

    align-self: start;
    margin-left: 3rem;

    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.hero-title {
    font-size: 36px;
}

.hero-buttons {
    display: flex;
    gap: 1rem;
}

.hero-button-learn {
    background-color: #202020;
}

.hero-button-join {
    background-color: #cd1120;
}


.intro-container {
    color: white;
    font-size: 24px;
    text-align: center;

    background-color: #202020;

    display: flex;
    flex-direction: column;
    gap: 2em;

    padding: 4rem 12rem;

    border-radius: 24px;
}

.intro-title {
    font-size: 36px;
}

.intro-link, .card-link {
    position: relative;

    color: white;
    font-weight: bold;
    text-decoration: underline;
}

.intro-link::after, .card-link::after {
    position: absolute;
    margin-left: 0.5em;

    content: "\27A4";

    text-decoration: none;
}

.intro-link::after {
    color: #b81d21;
}


/* PSD has a 5px border visible for drop shadow, may be a placement error, TODO describe how to fix, and does mobile PSD have it as well? */
.card-container {
    max-width: 1980px;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    margin: 0 auto;

    /* TODO: Look into how to get box-shadow (or border?) auto-resizing */
    border-bottom: 5px solid white;
    box-shadow: 0 20px 27px -27px;
}

.card {
    max-width: 862px;
    /* TODO: Look into this; browser compatibility is very recent (e.g. no Firefox for Android <4.3*/
    aspect-ratio: 3/2;

    padding: 4rem;

    font-size: 24px;
    color: white;
    text-align: center;

    display: flex;
    flex-basis: 574px;
    flex-grow: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;

    background-repeat: no-repeat;
    background-size: cover;
}

.card-members {
    background-image: url("assets/img/card-members.png");
}

.card-grants {
    background-image: url("assets/img/card-grants.png");
}

.card-icon {
    width: 160px;
    height: 120px;
}

.card-title-primary {
    font-size: 36px;
    font-weight: bold;
}

.card-title-secondary {
    font-style: italic;
}


.supporter-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

/* TODO: Look into text-wrapping and overflow/clipping */
.supporter-header-primary {
    font-size: 36px;
    min-width: 26em;
    text-align: center;
}

.supporter-header-secondary {
    font-size: 24px;
}

.supporter-logo-container {
    display: flex;
    justify-content: space-between;
    gap: 3rem;
}

.supporter-logo-container img {
    max-height: 150px;
    width: auto;
}

